--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   tunequest-create:
     image: nginx
     volumes:
-      - .:/usr/share/nginx/html
+      - ./dist:/usr/share/nginx/html
     container_name: tunequest-create
     ports:
-      - 80:80
+      - 5173:80
     tty: true
     stdin_open: true
